Added routed and User model

--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -8,13 +8,13 @@
 
             <!-- Start Register Form -->
             <form action="">
-                <input type="text" name="" placeholder="Username">
+                <input type="text" name="username" placeholder="Username">
 
-                <input type="email" name="" placeholder="Email">
+                <input type="email" name="email" placeholder="Email">
 
-                <input type="password" name="" placeholder="Password">
+                <input type="password" name="password" placeholder="Password">
 
-                <input type="password" name="" placeholder="Repeat Password">
+                <input type="password" name="re-password" placeholder="Repeat Password">
 
                 <!-- Register Button -->
                 <button type="submit">Register</button>
