--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,24 +12,24 @@
 
 <body>
     <!--Error Container-->
-
-    <!-- <div>
+    {{#if error }}
+    <div>
         <div class="errorContainer">
-            <p>Error</p>
+            <p>{{error}}</p>
         </div>
-    </div> -->
-
+    </div>
+    {{/if}}
     <!-- Starts Header Section with Navigation Bar -->
     <header>
         <nav class="navbar">
             <div class="container">
                 <div class="logo">
                     <!-- Link to Home Page -->
-                    <a href="#">
+                    <a href="/">
                         <img width="50px" src="/static/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
                     </a>
                     <!-- Link to Home Page -->
-                    <a class="home" href="#">
+                    <a class="home" href="/">
                         <i>Petstagram</i>
                     </a>
                 </div>
@@ -38,7 +38,7 @@
                     <ul class="nav-group">
                         <li class="nav-item">
                             <!-- Link to Catalog Page -->
-                            <a href="#">
+                            <a href="/pets/catalog">
                                 <i>Catalog</i>
                             </a>
                         </li>
@@ -46,13 +46,13 @@
                         <!--For Guest User-->
                         <li class="nav-item">
                             <!-- Link to Login Page -->
-                            <a href="#">
+                            <a href="/users/login">
                                 <i>Login</i>
                             </a>
                         </li>
                         <li class="nav-item">
                             <!-- Link to Register Page -->
-                            <a href="#">
+                            <a href="/users/register">
                                 <i>Register</i>
                             </a>
                         </li>
@@ -60,21 +60,21 @@
                         <!--For login users-->
                         <li class="nav-item">
                             <!-- Link to Add Photo Page -->
-                            <a href="#">
+                            <a href="/pets/add-photo">
                                 <i>Add Photo</i>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <!-- Link to Profile Page -->
-                            <a href="#">
+                            <a href="/users/profile">
                                 <i>Profile</i>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <!-- Link to Logout Page -->
-                            <a href="#">
+                            <a href="/users/logout">
                                 <i>Logout</i>
                             </a>
                         </li>
@@ -84,8 +84,8 @@
         </nav>
     </header>
 
-{{{body}}}
-    
+    {{{body}}}
+
     <!-- Starts Footer Section -->
     <div class="footer">
         <span class="footer-section">
