added login and authentication

--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -7,14 +7,14 @@
             <h1>Petstagram</h1>
 
             <!-- Start Register Form -->
-            <form action="">
+            <form method="POST">
                 <input type="text" name="username" placeholder="Username">
 
                 <input type="email" name="email" placeholder="Email">
 
                 <input type="password" name="password" placeholder="Password">
 
-                <input type="password" name="re-password" placeholder="Repeat Password">
+                <input type="password" name="rePassword" placeholder="Repeat Password">
 
                 <!-- Register Button -->
                 <button type="submit">Register</button>
@@ -24,7 +24,7 @@
         <div class="second-option">
 
             <!-- Link to Login Page -->
-            <p>Have an account? <a href="#">LogIn</a></p>
+            <p>Have an account? <a href="/users/login">LogIn</a></p>
         </div>
     </div>
 
