added coockie parser, authentication and dynamic navigation

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -42,22 +42,7 @@
                                 <i>Catalog</i>
                             </a>
                         </li>
-
-                        <!--For Guest User-->
-                        <li class="nav-item">
-                            <!-- Link to Login Page -->
-                            <a href="/users/login">
-                                <i>Login</i>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <!-- Link to Register Page -->
-                            <a href="/users/register">
-                                <i>Register</i>
-                            </a>
-                        </li>
-
-                        <!--For login users-->
+                        {{#if isAuthenticated}}
                         <li class="nav-item">
                             <!-- Link to Add Photo Page -->
                             <a href="/pets/add-photo">
@@ -78,6 +63,24 @@
                                 <i>Logout</i>
                             </a>
                         </li>
+                        {{else}}
+                        <li class="nav-item">
+                            <!-- Link to Login Page -->
+                            <a href="/users/login">
+                                <i>Login</i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <!-- Link to Register Page -->
+                            <a href="/users/register">
+                                <i>Register</i>
+                            </a>
+                        </li>
+
+                        {{/if}}
+                        <!--For Guest User-->
+
+                        <!--For login users-->
                     </ul>
                 </div>
             </div>
